# Uncle-J-s-Refinery

./: .gitattributes  .gitignore  .session-end.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.merged  CONTRIBUTING.md  GEMINI.md  HANDOFF.md  LICENSE  PORTING.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  finish-install.ps1  finish-install.sh  healthcheck.ps1  healthcheck.sh  install-guardrails.ps1  install-guardrails.sh  install-langfuse.ps1  install-langfuse.sh  install-reliability.ps1  install-reliability.sh  install.ps1  install.sh  mempalace-backup.sh  mempalace-delete-wing.py  mempalace-health.py  mempalace-repair-now.sh  mempalace-repair-verify.sh  patch-jcodemunch-hook-paths.py  prd-template.md  prerequisites.ps1  prerequisites.sh  pyproject.toml  ralph-harness.ps1  ralph-harness.sh  (+2 more)
.claude/: settings.json
.github/workflows/: ci.yml
_review/: DREAMING_INTEGRATION_HANDOFF.md  mempalace-fts5-corruption.md  mempalace-mine-concurrency.md  mempalace-repair-orphaned-collections.md
config/: telegram-agents.toml
docs/: RELIABILITY.md  SESSION-END.md  STACK.md  ecc-import-proposal.md  skill-frontmatter-standard.md
features/auto-skill/: install.sh
features/dreaming/: README.md  dream.md  dream.sh  install.sh
features/gemini-integration/: README.md  install.sh  startup-probe.sh
features/github-webhook/: README.md  install.sh
features/mempalace/: install.sh
features/ralph-cron/: install.sh
features/session-stats/: README.md  install.sh  stats.md  stats.sh
features/skill-manager/: install.sh
features/stack-alerts/: README.md  install.ps1  install.sh
features/telegram-gateway/: install.sh
features/telegram-notify/: install.sh
global-agents/: architect.md  code-reviewer.md  planner.md  security-reviewer.md  silent-failure-hunter.md  tdd-guide.md
global-skills/agent-harness-backend-adoption-eval/: SKILL.md
global-skills/agent-harness-competitive-analysis/: SKILL.md
global-skills/audit-pipeline-fabrication-risk/: SKILL.md
global-skills/auto-maintain-commit-and-deploy/: SKILL.md
global-skills/catch-up-pull/: SKILL.md
global-skills/community-pr-stakeholder-response/: SKILL.md
global-skills/debug-hnsw-index-corruption/: SKILL.md
global-skills/deep-repo-analysis/: SKILL.md
global-skills/fog-of-chess-engine-mode-implementation/: SKILL.md
global-skills/freecad-parametric-toolkit-build/: SKILL.md
global-skills/healthcheck-interactive-hints/: SKILL.md
global-skills/install-script-cp-to-symlink/: SKILL.md
global-skills/judge/: SKILL.md
global-skills/library-backend-adoption-eval/: SKILL.md
global-skills/mcp-index-empty-diagnosis/: SKILL.md
global-skills/mempalace-boot-repair-always-runs/: SKILL.md
global-skills/mempalace-dict-pickle-repair/: SKILL.md
global-skills/mempalace-fts5-malformed-index-repair/: SKILL.md
global-skills/mempalace-hnsw-corruption-fix/: SKILL.md
global-skills/mempalace-repair-mine-interference/: SKILL.md
global-skills/mempalace-wing-failure-stale-server-state/: SKILL.md
global-skills/milestone-tier-implementation/: SKILL.md
global-skills/orchestrator/: SKILL.md
global-skills/outcomes/: RUBRIC.md.template  SKILL.md
global-skills/per-task-review-cycle/: SKILL.md
global-skills/platform-removal-cleanup/: SKILL.md
global-skills/polling-bot-age-filter-fix/: SKILL.md
global-skills/polling-bot-backlog-diagnosis/: SKILL.md
global-skills/polling-bot-offset-freeze-diagnosis/: SKILL.md
global-skills/post-audit-memory-capture/: SKILL.md
global-skills/post-audit-mempalace-capture/: SKILL.md
global-skills/post-upgrade-mcp-integration/: SKILL.md
global-skills/pre-mortem/: SKILL.md
global-skills/prior-art-check/: SKILL.md
global-skills/readme-sync/: SKILL.md
global-skills/review-queue-triage/: SKILL.md
global-skills/session-end-checklist/: SKILL.md
global-skills/session-status-briefing/: SKILL.md
global-skills/smart-review/: SKILL.md
global-skills/stack-not-at-head-remediation/: SKILL.md
global-skills/stale-lock-diagnosis/: SKILL.md
global-skills/stale-pending-memory-guard/: SKILL.md
global-skills/stop-hook-dedup-guard/: SKILL.md
global-skills/telegram-chat-history-persistence/: SKILL.md
global-skills/telegram-gateway-security-audit/: SKILL.md
global-skills/telegram-inline-button-promote/: SKILL.md
global-skills/terse-reply/: SKILL.md
global-skills/token-economy-prompt-authoring/: SKILL.md
global-skills/validate-external-audit/: SKILL.md
global-skills/verify-handoff-claims/: SKILL.md
global-skills/verify-pr-branch-before-resolve/: SKILL.md
hooks/discipline/: edit-surface-guard.sh  grep-guard.sh  unpushed-warn.sh
lib/: feature-helpers.ps1  feature-helpers.sh  install-update.sh  notify-telegram.ps1  notify-telegram.sh  notify.ps1  notify.sh
mcp-clients/: claude-code-mcp.json  claude-code-mcp.json.tmpl  claude-desktop-config-fragment.json  claude-desktop-config-fragment.json.tmpl  cursor-mcp.json  cursor-mcp.json.tmpl  windsurf-mcp.json  windsurf-mcp.json.tmpl
scripts/: auto-maintain.sh  build-vendored-pysqlite3.sh  check-stack-freshness.ps1  check-stack-freshness.sh  citation-audit.sh  citation_audit.py  fts5-guard.sh  generate-flowchart.py  github-webhook-server.py  healthcheck-notify.sh  jcodemunch-reindex.sh  jmunch-console.sh  log-correction.sh  mempalace-mcp-start.sh  mempalace-mine-convos.sh  mempalace-mine-project.sh  pin-canary.sh  post-merge-hook.sh  ralph-cron-run.sh  refinery-doctor.sh  review-check.sh  session-end-check.sh  session-notify.sh  session-start-autofix.sh  skill-link.sh  skill-suggest.sh  stack-alerts-poll.ps1  stack-alerts-poll.sh  stack-alerts-send.ps1  stack-alerts-send.sh  telegram-drain-offset.sh  telegram-gateway-poll.sh  turbovecdb-benchmark.py  turbovecdb-install.sh  turbovecdb-migrate.py  turbovecdb-report.sh  turbovecdb-sync.py
scripts/audit/: audit_lib.py  (+6 more)
tests/: test_audit.py  test_citation_audit.py  test_grep_guard.py  test_install_update.py  test_memweave_export.py  test_memweave_onnx_provider.py  test_memweave_search.py  test_recall_bench.py  test_session_end_check.py  test_skills.py  test_tg_security.py
(+37 files in other folders)
