[project]
name = "claude-stack"
version = "0.1.0"
description = "jMunch (code/data/docs) + MemPalace retrieval stack for AI agents"
readme = "README.md"
requires-python = ">=3.11"

# Core stack — pinned to git HEAD so we track every commit, not just PyPI releases.
# jcodemunch-mcp[local-embed] pulls in the bundled ONNX encoder so semantic
# search works offline without API keys. Drop the extra if you want a lighter install.
# To upgrade a package to latest HEAD: uv lock --upgrade-package <name> && uv sync --inexact
dependencies = [
    "jcodemunch-mcp[local-embed] @ git+https://github.com/jgravelle/jcodemunch-mcp.git",
    "jdatamunch-mcp @ git+https://github.com/jgravelle/jdatamunch-mcp.git",
    "jdocmunch-mcp @ git+https://github.com/jgravelle/jdocmunch-mcp.git",
    "mempalace @ git+https://github.com/MemPalace/mempalace.git",
    # Provides the `hnswlib` Python module so chromadb uses the Python segment API
    # (SegmentAPI) instead of the broken Rust bindings. MUST stay pinned at 0.7.6 —
    # chromadb 1.5.x requires exactly this version as its dev extra.
    "chroma-hnswlib==0.7.6",
    # uv is not a dep of the stack itself but we pin a recent version so
    # `uv run` resolves consistently for ad-hoc scripts.
    "uv >=0.5",
]

[project.optional-dependencies]
# Add AI-summary providers for jCodeMunch only if you plan to use them.
# Leave out of the default install to keep the venv small.
anthropic = ["jcodemunch-mcp[anthropic]"]
openai    = ["jcodemunch-mcp[openai]"]
gemini    = ["jcodemunch-mcp[gemini]"]
groq      = ["jcodemunch-mcp[groq]"]

# Notes on non-PyPI components (installed by install.sh, not here):
#   - Serena   : run via `uvx --from git+https://github.com/oraios/serena ...`
#                uvx keeps it in its own ephemeral env -- do NOT add it here.
#   - Context7 : Node package `@upstash/context7-mcp`, run via `npx -y`.
#                Requires Node.js 18+ on PATH.
#   - MotherDuck / DuckDB MCP : run via `uvx mcp-server-motherduck ...`
#                Kept out of this venv for the same reason as Serena.

[tool.uv]
# Keep the lockfile deterministic.
managed = true
# chromadb 1.5.x defaults to RustBindingsAPI which has a type-confusion HNSW bug
# (chroma-core/chroma#4460): element_levels_[i] written as float but read as int32.
# Fix: pin chroma-hnswlib==0.7.6 (stable Python hnswlib) and force SegmentAPI via
# CHROMA_API_IMPL env var in all launch scripts. Never remove this pin without
# verifying repair runs clean with zero astronomical header values.
override-dependencies = ["chromadb==1.5.8", "chroma-hnswlib==0.7.6"]

[tool.uv.sources]
jcodemunch-mcp = { git = "https://github.com/jgravelle/jcodemunch-mcp.git" }
jdatamunch-mcp = { git = "https://github.com/jgravelle/jdatamunch-mcp.git" }
jdocmunch-mcp  = { git = "https://github.com/jgravelle/jdocmunch-mcp.git" }
mempalace      = { git = "https://github.com/MemPalace/mempalace.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
