[project]
name = "claude-stack"
version = "0.1.0"
description = "jMunch (code/data/docs) retrieval stack + offline memweave memory for AI agents"
readme = "README.md"
requires-python = ">=3.11"

# Core stack — pinned to git HEAD so we track every commit, not just PyPI releases.
# jcodemunch-mcp[local-embed] pulls in the bundled ONNX encoder so semantic
# search works offline without API keys. Drop the extra if you want a lighter install.
# To upgrade a package to latest HEAD: uv lock --upgrade-package <name> && uv sync --inexact
dependencies = [
    "jcodemunch-mcp[local-embed] @ git+https://github.com/jgravelle/jcodemunch-mcp.git",
    "jdatamunch-mcp @ git+https://github.com/jgravelle/jdatamunch-mcp.git",
    "jdocmunch-mcp @ git+https://github.com/jgravelle/jdocmunch-mcp.git",
    # uv is not a dep of the stack itself but we pin a recent version so
    # `uv run` resolves consistently for ad-hoc scripts.
    "uv >=0.5",
    # WAL data-race fix (present in all SQLite 3.7.0–3.51.2, fixed in 3.51.3).
    # The uv Python 3.11 has SQLite 3.50.4 statically compiled in; pysqlite3 is
    # built from source against 3.51.3 amalgamation by install.sh step 2b.
    # The _pysqlite3_patch.pth in site-packages swaps stdlib sqlite3 → pysqlite3
    # at every venv process startup (covers mine crons, repair, MCP server).
    "pysqlite3>=0.6.0",
]

[project.optional-dependencies]
# Add AI-summary providers for jCodeMunch only if you plan to use them.
# Leave out of the default install to keep the venv small.
anthropic = ["jcodemunch-mcp[anthropic]"]
openai    = ["jcodemunch-mcp[openai]"]
gemini    = ["jcodemunch-mcp[gemini]"]
groq      = ["jcodemunch-mcp[groq]"]

# Notes on non-PyPI components (installed by install.sh, not here):
#   - Serena   : run via `uvx --from git+https://github.com/oraios/serena ...`
#                uvx keeps it in its own ephemeral env -- do NOT add it here.
#   - Context7 : Node package `@upstash/context7-mcp`, run via `npx -y`.
#                Requires Node.js 18+ on PATH.
#   - MotherDuck / DuckDB MCP : run via `uvx mcp-server-motherduck ...`
#                Kept out of this venv for the same reason as Serena.

[tool.uv]
# Keep the lockfile deterministic.
managed = true

[tool.uv.sources]
jcodemunch-mcp = { git = "https://github.com/jgravelle/jcodemunch-mcp.git" }
jdatamunch-mcp = { git = "https://github.com/jgravelle/jdatamunch-mcp.git" }
jdocmunch-mcp  = { git = "https://github.com/jgravelle/jdocmunch-mcp.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
