[project]
name = "claude-stack"
version = "0.1.0"
description = "jMunch (code/data/docs) retrieval stack + offline memweave memory for AI agents"
readme = "README.md"
requires-python = ">=3.11"

# Core stack — pinned to git HEAD so we track every commit, not just PyPI releases.
# jcodemunch-mcp[local-embed] pulls in the bundled ONNX encoder so semantic
# search works offline without API keys. Drop the extra if you want a lighter install.
# To upgrade a package to latest HEAD: uv lock --upgrade-package <name> && uv sync --inexact
dependencies = [
    "jcodemunch-mcp[local-embed] @ git+https://github.com/jgravelle/jcodemunch-mcp.git",
    "jdatamunch-mcp @ git+https://github.com/jgravelle/jdatamunch-mcp.git",
    "jdocmunch-mcp @ git+https://github.com/jgravelle/jdocmunch-mcp.git",
    # uv is not a dep of the stack itself but we pin a recent version so
    # `uv run` resolves consistently for ad-hoc scripts.
    "uv >=0.5",
    # WAL data-race fix (present in all SQLite 3.7.0–3.51.2, fixed in 3.51.3).
    # The uv Python 3.11 has SQLite 3.50.4 statically compiled in; pysqlite3 is
    # pinned below to a VENDORED 3.51.3 wheel (see [tool.uv.sources]) so a bare
    # `uv sync` can no longer revert it to the PyPI 3.51.1 wheel (still buggy).
    # The _pysqlite3_patch.pth in site-packages swaps stdlib sqlite3 → pysqlite3
    # at every venv process startup (covers mine crons, repair, MCP server).
    "pysqlite3>=0.6.0",
]

[project.optional-dependencies]
# Add AI-summary providers for jCodeMunch only if you plan to use them.
# Leave out of the default install to keep the venv small.
anthropic = ["jcodemunch-mcp[anthropic]"]
openai    = ["jcodemunch-mcp[openai]"]
gemini    = ["jcodemunch-mcp[gemini]"]
groq      = ["jcodemunch-mcp[groq]"]

# Notes on non-PyPI components (installed by install.sh, not here):
#   - Serena   : run via `uvx --from git+https://github.com/oraios/serena ...`
#                uvx keeps it in its own ephemeral env -- do NOT add it here.
#   - Context7 : Node package `@upstash/context7-mcp`, run via `npx -y`.
#                Requires Node.js 18+ on PATH.
#   - MotherDuck / DuckDB MCP : run via `uvx mcp-server-motherduck ...`
#                Kept out of this venv for the same reason as Serena.

[tool.uv]
# Keep the lockfile deterministic.
managed = true

[tool.uv.sources]
jcodemunch-mcp = { git = "https://github.com/jgravelle/jcodemunch-mcp.git" }
jdatamunch-mcp = { git = "https://github.com/jgravelle/jdatamunch-mcp.git" }
jdocmunch-mcp  = { git = "https://github.com/jgravelle/jdocmunch-mcp.git" }
# Vendored pysqlite3 built against the SQLite 3.51.3 amalgamation (WAL data-race
# fix). The marker scopes the wheel to THIS host's ABI (cp311 / linux / x86_64);
# any other env (incl. a future uv Python bump) falls back to the PyPI registry.
# Rebuild the wheel after a Python-minor bump: scripts/build-vendored-pysqlite3.sh
# DO NOT unpin or `uv lock --upgrade-package pysqlite3` — reintroduces the 3.51.1
# WAL bug. healthcheck.sh asserts sqlite_version==3.51.3 so a revert fails loud.
pysqlite3 = [
    { path = "vendor/wheels/pysqlite3-0.6.0-cp311-cp311-linux_x86_64.whl", marker = "python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
